--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "description": "Add badges to blocks in a reveal.js presentation",
   "homepage": "http://thomas.weinert.info/reveal-badges/",
   "license": "MIT",
-  "author": [
-    "Thomas Weinert <thomas@weinert.info>"
+  "contributors": [
+    "Thomas Weinert",
+    "Alexander Oberländer"
   ],
+  "author": {
+    "name": "Thomas Weinert",
+    "email": "thomas@weinert.info"
+  },
   "keywords": [
     "reveal",
     "badges",
